--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,20 @@
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+html,
+body {
     margin: 0;
+}
+
+html,
+body {
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -26,15 +37,6 @@ body {
     color: #eee;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin: 0;
-}
-
 hr {
     border: none;
     border-bottom: 2px solid #eee;
@@ -51,16 +53,21 @@ hr {
 }
 
 .bar-subtitle {
-    font-size: 3rem;
+    font-size: 3.2vh;
     font-weight: normal;
 }
 
 main {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 5vh;
-    padding: 0 5vh;
+    grid-gap: 5vh; */
 
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    padding: 0 5vh;
 }
 
 .bar-section {
@@ -68,42 +75,51 @@ main {
 }
 
 .bar-section-title {
-    font-size: 2.5rem;
+    font-size: 3vh;
     font-weight: normal;
 }
 
 .bar-section-grid {
-    padding:2vh 0;
-    display: grid;
-    grid-template-columns: auto auto;
+    width: 40vw;
+    padding: 2vh 0;
+    /* display: grid;
+    grid-template-columns: auto auto; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .bar-item {
+    width: 15vw;
     display: flex;
     text-align: left;
-    padding: 0.5vh;
+    padding: 1vh 0.5vw;
     align-items: center;
 }
 
 .bar-item-title {
     margin-bottom: 0.18vh;
-    font-size: 1.75rem;
+    font-size: 2vh;
 }
-
+.bar-item-size {
+    font-size: 1.7vh;
+}
 .bar-item-price {
-    font-size: 1.5rem;
+    font-size: 1.9vh;
 }
 
 .bar-item-logo {
-    margin-right: 24px;
+    margin-right: 1.2vw;
     height: 7vh;
-    width: 7vh;
+    width: 4vw;
 }
 
 .bar-item-logo img {
     width: 100%;
     height: 100%;
-    object-Fit: contain;
+    object-fit: contain;
     margin: auto;
 }
 
@@ -128,4 +144,14 @@ main {
 .bar-footer {
     text-align: center;
     font-size: 2vh;
+}
+
+@media (max-width: 1000px) {
+    .bar-section-grid {
+        width: 80vw;
+    }
+
+    .bar-item {
+        width: 50vw;
+    }
 }
