--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,14 @@
     box-sizing: border-box;
 }
 
+* {
+  text-shadow:
+    -1px -1px 0 black,
+     1px -1px 0 black,
+    -1px  1px 0 black,
+     1px  1px 0 black;
+}
+
 h1,
 h2,
 h3,
@@ -33,7 +41,7 @@ content {
 body {
     background-color: #000;
     font-family: 'Doppio One';
-    width: 90%;
+    width: 100%;
     color: #eee;
 }
 
@@ -49,11 +57,12 @@ hr {
 }
 
 .bar-logo {
+    filter: saturate(1.6);
     width: 40vh;
 }
 
 .bar-subtitle {
-    font-size: 3.2vh;
+    font-size: 3.5vh;
     font-weight: normal;
 }
 
@@ -75,12 +84,12 @@ main {
 }
 
 .bar-section-title {
-    font-size: 3vh;
+    font-size: 4vh;
     font-weight: normal;
 }
 
 .bar-section-grid {
-    width: 40vw;
+    width: 30vw;
     padding: 0vh 0;
     /* display: grid;
     grid-template-columns: auto auto; */
@@ -95,19 +104,19 @@ main {
     width: 15vw;
     display: flex;
     text-align: left;
-    padding: 1vh 0.5vw;
+    padding: 1vh 0vw;
     align-items: center;
 }
 
 .bar-item-title {
     margin-bottom: 0.12vh;
-    font-size: 2vh;
+    font-size: 2.5vh;
 }
 .bar-item-size {
-    font-size: 1.7vh;
+    font-size: 2.2vh;
 }
 .bar-item-price {
-    font-size: 1.9vh;
+    font-size: 18px
 }
 
 .bar-item-logo {
@@ -151,7 +160,7 @@ main {
 
 .bar-footer {
     text-align: center;
-    font-size: 2vh;
+    font-size: 2.2vh;
 }
 
 @media (max-width: 1000px) {
