--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,8 @@
 }
 
 * {
-  text-shadow:
-    -.1vh -.1vh 0 black,
-     .1vh -.1vh 0 black,
-    -.1vh  .1vh 0 black,
-     .1vh  .1vh 0 black;
+    text-shadow: -0.1vh -0.1vh 0 black, 0.1vh -0.1vh 0 black,
+        -0.1vh 0.1vh 0 black, 0.1vh 0.1vh 0 black;
 }
 
 h1,
@@ -47,7 +44,7 @@ body {
 
 hr {
     border: none;
-    border-bottom: .1vh solid #eee;
+    border-bottom: 0.1vh solid #eee;
     margin: 0.5vh auto 0.5vh auto;
     opacity: 0.5;
 }
@@ -116,7 +113,7 @@ main {
     font-size: 2.2vh;
 }
 .bar-item-price {
-    font-size: 2vh
+    font-size: 2vh;
 }
 
 .bar-item-logo {
@@ -143,8 +140,8 @@ main {
 .bar-item-skull {
     vertical-align: middle;
     width: 1.42vh;
-    margin-left: .1vh;
-    margin-right: .2vh;
+    margin-left: 0.1vh;
+    margin-right: 0.2vh;
     margin-top: -0.18vh;
 }
 
